objects/Fix_Test__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Fix_Number__c</fullName>
        <label>Fix Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fix_Text__c</fullName>
        <label>Fix Text</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fix</label>
        <type>Checkbox</type>
    </fields>
    <label>Fix Test</label>
</CustomObject>